Add google analytics

--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,2 +1,11 @@
-<!-- INCLUDE ANALYTICS HERE -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZVD4Q6W9QG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZVD4Q6W9QG');
+  gtag('event', 'page_view');
+</script>
 <link rel="icon" type="image/x-icon" href="/assets/images/boogie-favicon.png">
