--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 {{ content }}
 <em>
 {% if page.author %}
-    Originally published by {{ page.author }}
+    Written by {{ page.author }}
 {% endif %}
 {% if page.date %}
     -- {{ page.date }}
